Fixed incorrect links and lowered top section font size on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -62,6 +62,7 @@ span:hover::before {
 
   .flex-container-row > a {
     width: 100%;
+    font-size: 32px;
     text-align: center;
   }
 }
@@ -78,6 +79,15 @@ span:hover::before {
 
   #contact {
     height: 100vh;
+  }
+
+  #name {
+    margin: 50px 16px 0 16px;
+    font-size: 50px;
+  }
+
+  .flex-container-row > a {
+    font-size: 24px;
   }
 }
 
@@ -109,7 +119,6 @@ span:hover::before {
 }
 
 .flex-container-row > a {
-  font-size: 32px;
   margin: auto;
   opacity: 0;
   text-decoration: none;
@@ -188,9 +197,9 @@ span:hover::before {
 }
 
 /*.card-wrapper {*/
-  /*height: 100%;*/
-  /*!*display: flex;*!*/
-  /*!*justify-content: center;*!*/
+/*height: 100%;*/
+/*!*display: flex;*!*/
+/*!*justify-content: center;*!*/
 /*}*/
 
 .card-container {
